Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-82263

[REG: 5.13->5.14]: QML DropArea wrong signals order

XMLWordPrintable

    • All
    • 4a5b0ad84fbc0f814c38b0abcccb7b5421f41a19 (qt/qtdeclarative/dev) 9e6274e180312e9e6c9d26322668f1427abfe4b9 (qt/qtdeclarative/6.2)

      When there are two or more DropAreas and we move drag from one to another DropArea we get entered() signal from the new one before exited() from the previous one.

      Steps to reproduce:

      onEntered: console.log("ENTERED")
      onExited: console.log("EXITED")

      • Compile and run example
      • Select Tiles in the app
      • Move some item to the nearest DropArea, don't release LMB, then move it to another one and release LMB.
      • Look at the application output:

      qml: ENTERED
      qml: ENTERED
      qml: EXITED
      qml: EXITED

       

      Qt 5.12.7 and earlier works fine.

      I have checked on Windows, Android and iOS, it reproduces for all of them.

        For Gerrit Dashboard: QTBUG-82263
        # Subject Branch Project Status CR V

            max.goldstein Maximilian Goldstein
            nikita1024 Nikita Ololoev
            Votes:
            4 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes